# aws-s3-etl-medallion

./: README.md  main.py  pyproject.toml  teste.py
data/: Clientes.parquet  Clientes_gold.parquet
